# keymouse-studio

./: .gitignore  LICENSE  README.en.md  README.md  config.json  timed_click.py
backend/: pyproject.toml
backend/probes/: requirements.txt
backend/probes/windows/: display_probe.py  hotkey_probe.py  listener_probe.py  privilege_probe.py  send_input_probe.py  system_probe.py  timing_probe.py
backend/src/keymouse_studio/: __init__.py  config.py  dependencies.py  main.py  security.py
backend/src/keymouse_studio/api/routers/: capabilities.py  clicker.py  events.py  health.py  operations.py  playback.py  (+3 more)
backend/src/keymouse_studio/domain/: enums.py  errors.py  state_machine.py
backend/src/keymouse_studio/services/: action_normalizer.py  automation_coordinator.py  clicker_service.py  event_service.py  hotkey_service.py  operation_service.py  playback_service.py  recording_service.py  script_migrator.py  script_service.py  settings_service.py
backend/tests/: conftest.py
backend/tests/contract/: test_config.py  test_events.py  test_scripts_api.py  test_settings_api.py
backend/tests/integration/: test_api.py  test_clicker_api.py  test_phase_d_loop.py  test_recording_playback_api.py
backend/tests/probes/: test_probe_contracts.py  test_real_input_probe.py  test_windows_snapshot.py
backend/tests/unit/: test_action_normalizer.py  test_clicker_service.py  test_event_subscription.py  test_input_listener.py  test_playback_service.py  test_privilege.py  test_recording_resilience.py  test_repository.py  test_schemas.py  test_send_input.py  test_state_and_events.py
(+85 files in other folders)
