[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keymouse-studio-backend"
version = "0.1.0"
description = "Local backend for KeyMouse Studio"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.10,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "httpx>=0.28,<1",
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/keymouse_studio"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "windows_probe: Windows-only read-only technical probe",
  "real_input: may capture or inject real keyboard or mouse input",
  "manual: requires an operator and a dedicated probe target",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["keymouse_studio"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "pynput.*"
ignore_missing_imports = true
